--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "squade",
   "version": "1.0.0",
-  "description": "A console tool to solve quadratic equations in both interactive and non-interactive mode",
+  "description": "A command line tool to solve quadratic equations in both interactive and non-interactive mode",
   "scripts": {
     "start": "node src/index.js",
     "style": "npx eslint *.js --fix"
